--- a/input/_Layout.cshtml
+++ b/input/_Layout.cshtml
@@ -29,6 +29,7 @@
         <link href="@Context.GetLink("/assets/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
         <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link href="@Context.GetLink("/assets/css/lightbox.min.css")" rel="stylesheet" />
         <link href="@Context.GetLink("/assets/css/override.css")" rel="stylesheet" />
 
 
@@ -122,6 +123,7 @@
                 <script src="@Context.GetLink("/assets/js/Please-compressed.js")"></script>
                 <script src="@Context.GetLink("/assets/js/background-check.min.js")"></script>
                 <script src="@Context.GetLink("/assets/js/gist-embed.min.js")"></script>
+                <script src="@Context.GetLink("/assets/js/lightbox.min.js")"></script>
 
                 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
                 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
