--- a/input/_PostLayout.cshtml
+++ b/input/_PostLayout.cshtml
@@ -6,6 +6,8 @@
     @Html.Partial("_PostHeader.cshtml")
 }
 
-@RenderBody()
+<div class="entry-content">
+    @RenderBody()
+</div>
 
 @Html.Partial("_PostFooter.cshtml")
