--- a/input/_Header.cshtml
+++ b/input/_Header.cshtml
@@ -1,3 +1,3 @@
 <div class="site-heading">
-    <h1>@Model.WithoutSettings.String(BlogKeys.Title)</h1>
-</div>    
+    <h1>@Model.WithoutSettings.String(BlogExKeys.Title)</h1>
+</div>
