--- a/input/_IndexHeader.cshtml
+++ b/input/_IndexHeader.cshtml
@@ -1,14 +1,14 @@
 <div class="site-heading">
-    @if(Context.String(BlogKeys.Description) != null)
+    @if(Context.String(BlogExKeys.Description) != null)
     {
-        <h1>@Context.String(BlogKeys.Description)</h1>
+        <h1>@Context.String(BlogExKeys.Description)</h1>
     }
-    @if(Context.String(BlogKeys.Intro) != null)
-    {            
-        @if(Context.String(BlogKeys.Description) != null)
+    @if(Context.String(BlogExKeys.Intro) != null)
+    {
+        @if(Context.String(BlogExKeys.Description) != null)
         {
             <hr class="small">
         }
-        <span class="subheading">@Context.String(BlogKeys.Intro)</span>
+        <span class="subheading">@Context.String(BlogExKeys.Intro)</span>
     }
 </div>
