--- a/input/_Layout.cshtml
+++ b/input/_Layout.cshtml
@@ -1,6 +1,6 @@
 @{
-        string Title = Model.WithoutSettings.String(BlogKeys.Title);
-        string PageTitle = Context.String(BlogKeys.Title) + (string.IsNullOrWhiteSpace(Title) ? string.Empty : " - " + Title);
+        string Title = Model.WithoutSettings.String(BlogExKeys.Title);
+        string PageTitle = Context.String(BlogExKeys.Title) + (string.IsNullOrWhiteSpace(Title) ? string.Empty : " - " + Title);
 }
 
 <!DOCTYPE html>
@@ -10,14 +10,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
 
         <title>@PageTitle</title>
-        <meta name="description" content="@Context.String(BlogKeys.Description)" />
+        <meta name="description" content="@Context.String(BlogExKeys.Description)" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        @if (Context.String(BlogKeys.RssPath) != null) {
-        <link type="application/rss+xml" rel="alternate" title="@Context.String(BlogKeys.Title)" href="@Context.GetLink(Context.String(BlogKeys.RssPath))" />
+        @if (Context.String(BlogExKeys.RssPath) != null) {
+        <link type="application/rss+xml" rel="alternate" title="@Context.String(BlogExKeys.Title)" href="@Context.GetLink(Context.String(BlogExKeys.RssPath))" />
         }
-        @if (Context.String(BlogKeys.AtomPath) != null) {
-        <link type="application/atom+xml" rel="alternate" title="@Context.String(BlogKeys.Title)" href="@Context.GetLink(Context.String(BlogKeys.AtomPath))" />
+        @if (Context.String(BlogExKeys.AtomPath) != null) {
+        <link type="application/atom+xml" rel="alternate" title="@Context.String(BlogExKeys.Title)" href="@Context.GetLink(Context.String(BlogExKeys.AtomPath))" />
         }
         <link rel="shortcut icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
         <link rel="icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
@@ -26,15 +26,15 @@
         <link href="@Context.GetLink("/assets/css/highlight.css")" rel="stylesheet">
         <link href="@Context.GetLink("/assets/css/clean-blog.css")" rel="stylesheet" />
         <link href="@Context.GetLink("/assets/css/master.css")" rel="stylesheet" />
-        <link href="@Context.GetLink("/assets/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
+        <link href="@Context.GetLink("/assets/css/all.min.css")" rel="stylesheet" type="text/css">
         <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
         <link href="@Context.GetLink("/assets/css/lightbox.min.css")" rel="stylesheet" />
         <link href="@Context.GetLink("/assets/css/override.css")" rel="stylesheet" />
 
 
-        <meta name="application-name" content="@Context.String(BlogKeys.Title)" />
-        <meta name="msapplication-tooltip" content="@Context.String(BlogKeys.Title)" />
+        <meta name="application-name" content="@Context.String(BlogExKeys.Title)" />
+        <meta name="msapplication-tooltip" content="@Context.String(BlogExKeys.Title)" />
         <meta name="msapplication-starturl" content="@Context.GetLink("/")" />
 
         <meta property="og:title" content="@PageTitle" />
@@ -59,7 +59,7 @@
                                         <span class="icon-bar"></span>
                                         <span class="icon-bar"></span>
                                         </button>
-                                        <a class="navbar-brand" href="@Context.GetLink("/")">@Context.String(BlogKeys.Title)</a>
+                                        <a class="navbar-brand" href="@Context.GetLink("/")">@Context.String(BlogExKeys.Title)</a>
                                 </div>
 
                                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,9 +76,9 @@
                 <!-- Page Header -->
                 @{
                         string backgroundImage = null;
-                        if(Model.String(BlogKeys.Image) != null)
+                        if(Model.String(BlogExKeys.Image) != null)
                         {
-                                backgroundImage = $"background-image: url(\"{Model.String(BlogKeys.Image)}\")";
+                                backgroundImage = $"background-image: url(\"{Model.String(BlogExKeys.Image)}\")";
                         }
                 }
                 <header class="intro-header" id="intro-header" style="@backgroundImage">
@@ -135,7 +135,7 @@
                 @Html.Partial("_Scripts")
                 <script>hljs.initHighlightingOnLoad();</script>
 
-                @if(Model.String(BlogKeys.Image) == null)
+                @if(Model.String(BlogExKeys.Image) == null)
                 {
                         <script type="text/javascript">
                                 // Header background
