--- a/input/_PostList.cshtml
+++ b/input/_PostList.cshtml
@@ -3,20 +3,20 @@
 @{
     foreach (IDocument post in Model)
     {
-        string lead = post.String(BlogKeys.Lead);
+        string lead = post.String(BlogExKeys.Lead);
 
         <div class="post-list">
             <a href="@Context.GetLink(post)">
-                <h3 class="post-title">@post.WithoutSettings.String(BlogKeys.Title)</h3>
+                <h3 class="post-title">@post.WithoutSettings.String(BlogExKeys.Title)</h3>
                 @if(!string.IsNullOrWhiteSpace(lead))
                 {
                     <h4 class="post-subtitle">@lead</h4>
                 }
             </a>
-            <p class="post-meta">Posted on @(post.Get<DateTime>(BlogKeys.Published).ToLongDateString(Context))</p>
-            @if(Context.Bool(BlogKeys.ArchiveExcerpts))
+            <p class="post-meta">Posted on @(post.Get<DateTime>(BlogExKeys.Published).ToLongDateString(Context))</p>
+            @if(Context.Bool(BlogExKeys.ArchiveExcerpts))
             {
-                @Html.Raw(post.String(BlogKeys.Excerpt))
+                @Html.Raw(post.String(BlogExKeys.Excerpt))
             }
         </div>
     }
