--- a/input/_Tags.cshtml
+++ b/input/_Tags.cshtml
@@ -1,13 +1,13 @@
 Title: All Tags
 ---
 <div class="container-sm-height">
-    <div class="row row-sm-height">		
-        <div class="col-sm-12 col-sm-height">            
-            @foreach (IDocument tagDocument in Documents[Blog.Tags]
-                .GroupBy(x => x.String(BlogKeys.Tag)).Select(x => x.Where(p => p.Get<int>(Keys.CurrentPage) == 1).First())
+    <div class="row row-sm-height">
+        <div class="col-sm-12 col-sm-height">
+            @foreach (IDocument tagDocument in Documents[BlogEx.Tags]
+                .GroupBy(x => x.String(BlogExKeys.Tag)).Select(x => x.Where(p => p.Get<int>(Keys.CurrentPage) == 1).First())
                 .OrderByDescending(x => x.Get<int>(Keys.TotalItems)))
             {
-                string tag = tagDocument.String(BlogKeys.Tag);
+                string tag = tagDocument.String(BlogExKeys.Tag);
                 string postCount = tagDocument.String(Keys.TotalItems);
                 <a role="button" href="@Context.GetLink(tagDocument)" class="btn btn-default btn-sm"> @tag (@postCount)</a>
             }
