--- a/input/_Layout.cshtml
+++ b/input/_Layout.cshtml
@@ -13,14 +13,54 @@
         <meta name="description" content="@Context.String(BlogExKeys.Description)" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        @if (Context.Bool(ExtraKeys.IsShowOg)) {
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="@Context.String(BlogExKeys.Title)">
+        <meta property="og:description" content="@Context.String(BlogExKeys.Description)">
+        <meta property="og:url" content="https://@Context.String(Keys.Host)/">
+        <meta property="og:site_name" content="@Context.String(BlogExKeys.Title)">
+        <meta property="og:locale" content="ja_JP">
+
+                @if (Context.String(ExtraKeys.Icon512Path) != null) {
+        <meta property="og:image" content="@Context.String(ExtraKeys.Icon512Path)">
+        <meta property="og:image:width" content="512">
+        <meta property="og:image:height" content="512">
+                }
+        }
+
+        @if (Context.String(ExtraKeys.Twitter) != null) {
+        <meta name="twitter:creator" content="@Context.String(ExtraKeys.Twitter)">
+        <meta name="twitter:site" content="@Context.String(ExtraKeys.Twitter)">
+        }
+
         @if (Context.String(BlogExKeys.RssPath) != null) {
         <link type="application/rss+xml" rel="alternate" title="@Context.String(BlogExKeys.Title)" href="@Context.GetLink(Context.String(BlogExKeys.RssPath))" />
         }
+
         @if (Context.String(BlogExKeys.AtomPath) != null) {
         <link type="application/atom+xml" rel="alternate" title="@Context.String(BlogExKeys.Title)" href="@Context.GetLink(Context.String(BlogExKeys.AtomPath))" />
         }
+
+        @if (Context.String(ExtraKeys.FaviconPath) != null) {
         <link rel="shortcut icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
         <link rel="icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
+        }
+
+        @if (Context.String(ExtraKeys.Icon32Path) != null) {
+        <link rel="icon" href="@Context.String(ExtraKeys.Icon32Path)" sizes="32x32">
+        }
+
+        @if (Context.String(ExtraKeys.Icon192Path) != null) {
+        <link rel="icon" href="@Context.String(ExtraKeys.Icon192Path)" sizes="192x192">
+        }
+
+        @if (Context.String(ExtraKeys.Icon180Path) != null) {
+        <link rel="apple-touch-icon-precomposed" href="@Context.String(ExtraKeys.Icon180Path)">
+        }
+
+        @if (Context.String(ExtraKeys.Icon270Path) != null) {
+        <meta name="msapplication-TileImage" content="@Context.String(ExtraKeys.Icon270Path)">
+        }
 
         <link href="@Context.GetLink("/assets/css/bootstrap.min.css")" rel="stylesheet" />
         <link href="@Context.GetLink("/assets/css/highlight.css")" rel="stylesheet">
@@ -124,6 +164,18 @@
                 <script src="@Context.GetLink("/assets/js/background-check.min.js")"></script>
                 <script src="@Context.GetLink("/assets/js/gist-embed.min.js")"></script>
                 <script src="@Context.GetLink("/assets/js/lightbox.min.js")"></script>
+
+                @if(Model.String(ExtraKeys.GoogleAnalyticsTrackingId) != null)
+                {
+                        <!-- Global site tag (gtag.js) - Google Analytics -->
+                        <script async src="https://www.googletagmanager.com/gtag/js?id=@Model.String(ExtraKeys.GoogleAnalyticsTrackingId)"></script>
+                        <script type="text/javascript">
+                                window.dataLayer = window.dataLayer || [];
+                                function gtag(){dataLayer.push(arguments);}
+                                gtag('js', new Date());
+                                gtag('config', '@Model.String(ExtraKeys.GoogleAnalyticsTrackingId)');
+                        </script>
+                }
 
                 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
                 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
