--- a/input/assets/css/override.css
+++ b/input/assets/css/override.css
@@ -17,6 +17,10 @@ h4.widgettitle {
   font-size: 1.2em;
 }
 
+.widgetcontent {
+  padding: 8px 10px
+}
+
 .sidebar .sidebar_part .widgettitle:before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
